Replace options classes with HashOptions throughout